# kclpp

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/kclpp/: APIGuard.h  AsyncGroup.h  KCLPPError.h  MoveWrapper.h  Optional.h  Outcome.h  ScopeGuard.h  TimeLogger.h  TimerSettings.h  UniqueToken.h  Unit.h  macros.h  traits.h
include/kclpp/async/: BaseEvent.h  CallbackEvent.h  EvBase.h  EventContext.h  EventError.h  EventFD.h  JustOnce.h  KCLAsyncContext.h  SignalEvent.h  SignalHandlerRegistry.h  TimerEvent.h
include/kclpp/async/queues/: EventDataChannel.h  MPMCQueue.h  MPSCEventChannel.h  QueueError.h  SPSCEventChannel.h  SPSCQueue.h
include/kclpp/async/tpool/: CallbackTask.h  Task.h  ThreadPool.h  ThreadPoolError.h  ThreadPoolWorker.h
include/kclpp/async/wheel/: DynamicWheelBuffer.h  HTimerWheel.h  WheelBuffer.h
include/kclpp/clientlib/: Record.h  RecordProcessorCheckpointer.h  RecordProcessorCheckpointerIf.h  SentinelCheckpoint.h  ShutdownNotification.h  ShutdownReason.h
include/kclpp/clientlib/record_processor/: CallbackRecordProcessorFactory.h  InitializeInput.h  ProcessRecordsInput.h  RecordProcessor.h  RecordProcessorError.h  RecordProcessorFactory.h  ShutdownInput.h
include/kclpp/clientlib/worker/: InitialPositionInStream.h  ShardConsumer.h  ShardConsumerError.h  ShardConsumerIf.h  ShardConsumerStateType.h  ShardInfo.h  StreamConfig.h  Worker.h  WorkerError.h  WorkerParams.h  WorkerState.h  WorkerTask.h  (+1 more)
include/kclpp/clock/: Clock.h  SystemClock.h  types.h
include/kclpp/dynamo/: KCLDynamoClient.h  types.h
include/kclpp/func/: Function.h  callable_traits.h
include/kclpp/kinesis/: KCLKinesisClient.h  ShardIterator.h  ShardIteratorDescription.h  ShardIteratorProperties.h  types.h
include/kclpp/leases/: ExtendedSequenceNumber.h  Lease.h  LeaseCheckpointer.h  LeaseCheckpointerIf.h  LeaseCoordinator.h  LeaseCoordinatorIf.h  LeaseManager.h  LeaseManagerIf.h  LeaseRenewer.h  LeaseRenewerIf.h  LeaseTaker.h  LeaseTakerIf.h  dynamo_helpers.h  errors.h  types.h
include/kclpp/locks/: LockError.h  PThreadSpinLock.h  SpinLock.h  Synchronized.h  ThreadBaton.h
include/kclpp/macros/: core.h  debug.h  proxies.h
include/kclpp/posix/: FileDescriptor.h  PosixError.h
include/kclpp/util/: cas.h  misc.h  util.h
include/kclpp_test_support/: KinesisClientTestContext.h  KinesisRecordCRUDTestContext.h  LeaseCoordinatorTestContext.h  LeaseManagerTestContext.h  MockClock.h  RecordInput.h  StreamGuard.h  TableGuard.h  TestRetryStrategy.h  misc.h  misc_kinesis.h  testConfig.h
notes/: misc.md
scripts/: common.sh  deps.sh  get-bins.sh  run-dynamo.sh  run-kinesalite.sh
src/: main.cpp  run_api_tests.cpp
src/kclpp/: APIGuard.cpp  AsyncGroup.cpp  ScopeGuard.cpp  TimeLogger.cpp  TimerSettings.cpp  UniqueToken.cpp
src/kclpp/async/: CallbackEvent.cpp  EvBase.cpp  EventContext.cpp  EventFD.cpp  JustOnce.cpp  KCLAsyncContext.cpp  SignalHandlerRegistry.cpp  TimerEvent.cpp
src/kclpp/clock/: SystemClock.cpp
src/kclpp/dynamo/: KCLDynamoClient.cpp
src/kclpp/kinesis/: KCLKinesisClient.cpp  ShardIterator.cpp  ShardIteratorDescription.cpp
src/kclpp/leases/: ExtendedSequenceNumber.cpp  Lease.cpp  LeaseCheckpointer.cpp  LeaseCoordinator.cpp  LeaseManager.cpp  LeaseRenewer.cpp  LeaseTaker.cpp  dynamo_helpers.cpp
src/kclpp/locks/: PThreadSpinLock.cpp  ThreadBaton.cpp
src/kclpp/posix/: FileDescriptor.cpp  PosixError.cpp
src/kclpp/util/: util.cpp
src/kclpp_test_support/: KinesisClientTestContext.cpp  KinesisRecordCRUDTestContext.cpp  LeaseCoordinatorTestContext.cpp  LeaseManagerTestContext.cpp  MockClock.cpp  RecordInput.cpp  StreamGuard.cpp  TableGuard.cpp  TestRetryStrategy.cpp  misc.cpp  misc_kinesis.cpp  testConfig.cpp
src/test/: test_nothing.cpp
src/test/functional/: test_KCLKinesisClient_functional.cpp  test_LeaseCoordinator_functional.cpp  test_LeaseManager_functional.cpp  test_LeaseRenewer_functional.cpp  test_LeaseTaker_functional.cpp  test_ShardConsumer_functional.cpp  test_Worker_functional.cpp
src/test/unit/: test_AsyncGroup.cpp  test_ScopeGuard.cpp
support/: package.json  proxy_server.js
(+18 files in other folders)
